infra/k8s/services/auth-srv.yml
apiVersion: v1
kind: Service
metadata:
  name: auth-srv
spec: 
  type: NodePort
  selector:
    app: auth
  ports:
    - name: auth
      protocol: TCP
      port: 5000
      targetPort: 5000
