infra/k8s/services/orders-process-srv.yml
apiVersion: v1
kind: Service
metadata:
  name: orders-process-srv
spec: 
  type: NodePort
  selector:
    app: orders-process
  ports:
    - name: orders-process
      protocol: TCP
      port: 5001
      targetPort: 5001
