infra/k8s/services/rabbitmq-srv.yml
apiVersion: v1
kind: Service
metadata:
  name: rabbitmq-srv
spec: 
  type: NodePort
  selector:
    app: rabbitmq
  ports:
    - name: rabbitmq
      protocol: TCP
      port: 5672
      targetPort: 5672
    - name: rabbitmq-http
      protocol: TCP
      port: 15672
      targetPort: 15672
