infra/k8s/services/react-app-srv.yml
apiVersion: v1
kind: Service
metadata:
  name: react-app-srv
spec: 
  type: NodePort
  selector:
    app: react-app
  ports:
    - name: react-app
      protocol: TCP
      port: 3000
      targetPort: 3000
