infra/k8s/services/ingress-srv.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-srv
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/use-regex: 'true'
spec:
  rules:
    - host: posts.com
      http:
        paths:
          - path: /posts
            pathType: Prefix
            backend:
              service:
                name: posts-clusterip-srv
                port:
                  number: 4000
          - path: /?(.*)
            pathType: Prefix
            backend:
              service:
                name: react-app-clusterip-srv
                port:
                  number: 6000
          - path: /order
            pathType: Prefix
            backend:
              service:
                name: posts-clusterip-srv
                port:
                  number: 4000
    - host: auth.com
      http:
        paths:
          - path: /login
            pathType: Prefix
            backend:
              service:
                name: auth-clusterip-srv
                port:
                  number: 5000
